@@ -89,6 +89,10 @@ SVN trunk (1.1+svn):
      specify a different list of randomly selectable leaders
    * added level as a possible argument for standard unit [filter]
    * terrain can be given a "light" flag to specify local light modification
+   * combined terrain can now take "best of" or "worst of" values for
+   combining
+   * choice policy for combined terrain can be separately specified for def
+   and mvt
  * music:
    * support for more than one music file per scenario with adjustable spacing
  * Miscellaneous
